--- a/engineer.html
+++ b/engineer.html
@@ -111,6 +111,7 @@
 									<!-- </header> -->
 									<div class="content">
 										<p>University masters level study of analogue and digital design of silicon devices at micrometer and nanometer scale.</p>
+										<p>As part of the Advanced Microelectronics course I have had a chip fabricated at 350nm with my documented designs. The chip includes a Ring Oscilator, Operational Transconductance Amplifier, and a 4 bit Full Adder.</p>
 									</div>
 								</section>
 							</div>
@@ -129,7 +130,8 @@
 										<!-- <h2>Images</h2> -->
 									<!-- </header> -->
 									<div class="content">
-										<p>University masters level study of mobile, terrestrial and satellite communications systems and protocols.</p>
+										<p>University masters level study of mobile, terrestrial and satellite communications systems and protocols. This covered both system architectures and designs, as well as standards and encoding techniques.</p>
+										<p>My final project for my Masters was to design a HDMI video test setup to test an optical fibre transceiver as part of a joint research project with the University of Southampton. The design chose to stream HDMI video over optical fibre using FPGAs. In order to design this a strong knowledge of communications standards and how to work within them was established.</p>
 									</div>
 								</section>
 							</div>
@@ -147,7 +149,13 @@
 									<span class="icon style2 major fa-battery-full"></span>
 									<h3>Practical Circuit Skills</h3>
 									<!-- <p>test</p> -->
-									<p>Ability to assemble circuits for prototyping using breadboard or veroboard. Including use of soldering iron, and test equipment such as osciloscopes, multimeters, signal generators, and bench power supplies.</p>
+									<p>Ability to assemble circuits for prototyping using breadboard, veroboard or PCB.</p>
+								</section>
+								<section>
+									<span class="icon style2 major fa-check"></span>
+									<h3>Practical Test</h3>
+									<!-- <p>test</p> -->
+									<p>Use of osciloscopes, multimeters, signal generators, and bench power supplies.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-github"></span>
