--- a/photographer.html
+++ b/photographer.html
@@ -202,7 +202,7 @@
 								</a>
 								<div class="caption">
 									<h3>Excelsior Geyser</h3>
-									<p>Midway geyser Basin - Yellowstone, USA - 2015</p>
+									<p>Midway geyser Basin - Yellowstone, USA - 2015.</p>
 									<ul class="actions">
 										<li><span class="button small">Expand</span></li>
 									</ul>
@@ -232,11 +232,23 @@
 									</ul>
 								</div>
 							</article>
+							<article>
+								<a href="images/gallery/photographer/landscapes/fulls/london-bw.jpg" class="image">
+									<img src="images/gallery/photographer/landscapes/thumbs/london-bw.jpg" alt="" />
+								</a>
+								<div class="caption">
+									<h3>London Skyline</h3>
+									<p>Looking across the Thames - London, UK - 2017.</p>
+									<ul class="actions">
+										<li><span class="button small">Expand</span></li>
+									</ul>
+								</div>
+							</article>
 						</div>
 					</section>
 
 
-				<!-- Portraitsr -->
+				<!-- Portraits -->
 					<section class="wrapper style1 align-center" id="portraits">
 						<div class="inner">
 							<h2>Portraiture and Headshot</h2>
@@ -247,7 +259,7 @@
 										<!-- <h2>Images</h2> -->
 									<!-- </header> -->
 									<div class="content">
-										<p>A great portrait or headshot is an essential for everybody these days as it is literally the face of your personal brand. For you, or for your business, great headshots can make you stand out amongst the crowd.</p>
+										<p>A great portrait or headshot is an essential for everybody these days as it is the face of your personal brand. For you, or for your business, great headshots can make you stand out amongst the crowd.</p>
 									</div>
 								</section>
 							</div>
@@ -255,7 +267,7 @@
 
 						<!-- Gallery -->
 						<div class="gallery style2 medium lightbox onscroll-fade-in">
-							<article>
+							<!-- <article>
 								<a href="images/gallery/photographer/portraits/fulls/art_camera.jpg" class="image">
 									<img src="images/gallery/photographer/portraits/thumbs/art_camera.jpg" alt="" />
 								</a>
@@ -266,7 +278,7 @@
 										<li><span class="button small">Expand</span></li>
 									</ul>
 								</div>
-							</article>
+							</article> -->
 							<article>
 								<a href="images/gallery/photographer/portraits/fulls/jack.jpg" class="image">
 									<img src="images/gallery/photographer/portraits/thumbs/jack.jpg" alt="" />
@@ -274,6 +286,66 @@
 								<div class="caption">
 									<h3>Profile Headshot</h3>
 									<p>LinkedIn profile headshot - Bath, UK - 2017</p>
+									<ul class="actions">
+										<li><span class="button small">Expand</span></li>
+									</ul>
+								</div>
+							</article>
+							<article>
+								<a href="images/gallery/photographer/portraits/fulls/suof-01.jpg" class="image">
+									<img src="images/gallery/photographer/portraits/thumbs/suof-01.jpg" alt="" />
+								</a>
+								<div class="caption">
+									<h3>Profile Headshot</h3>
+									<p>Students' Union Officer headshot - Bath, UK - 2013</p>
+									<ul class="actions">
+										<li><span class="button small">Expand</span></li>
+									</ul>
+								</div>
+							</article>
+							<!-- <article>
+								<a href="images/gallery/photographer/portraits/fulls/suof-02.jpg" class="image">
+									<img src="images/gallery/photographer/portraits/thumbs/suof-02.jpg" alt="" />
+								</a>
+								<div class="caption">
+									<h3>Profile Headshot</h3>
+									<p>Students' Union Officer headshot - Bath, UK - 2013</p>
+									<ul class="actions">
+										<li><span class="button small">Expand</span></li>
+									</ul>
+								</div>
+							</article> -->
+							<article>
+								<a href="images/gallery/photographer/portraits/fulls/suof-03.jpg" class="image">
+									<img src="images/gallery/photographer/portraits/thumbs/suof-03.jpg" alt="" />
+								</a>
+								<div class="caption">
+									<h3>Profile Headshot</h3>
+									<p>Students' Union Officer headshot - Bath, UK - 2013</p>
+									<ul class="actions">
+										<li><span class="button small">Expand</span></li>
+									</ul>
+								</div>
+							</article>
+							<article>
+								<a href="images/gallery/photographer/portraits/fulls/telethon-01.jpg" class="image">
+									<img src="images/gallery/photographer/portraits/thumbs/telethon-01.jpg" alt="" />
+								</a>
+								<div class="caption">
+									<h3>Profile Headshot</h3>
+									<p>Staff headshot - Bath, UK - 2017</p>
+									<ul class="actions">
+										<li><span class="button small">Expand</span></li>
+									</ul>
+								</div>
+							</article>
+							<article>
+								<a href="images/gallery/photographer/portraits/fulls/telethon-02.jpg" class="image">
+									<img src="images/gallery/photographer/portraits/thumbs/telethon-02.jpg" alt="" />
+								</a>
+								<div class="caption">
+									<h3>Profile Headshot</h3>
+									<p>Staff headshot - Bath, UK - 2017</p>
 									<ul class="actions">
 										<li><span class="button small">Expand</span></li>
 									</ul>
