--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -55,6 +55,7 @@
 								<li><a href="index.html" class="button special wide">Home</a></li>
 								<li><a href="engineer.html" class="button special wide">Engineer</a></li>
 								<li><a href="photographer.html" class="button special wide">Photographer</a></li>
+								<li><a href="prod_tech.html" class="button special wide">Technician</a></li>
 								<li><a href="#contact" class="button special wide smooth-scroll">Contact</a></li>
 							</ul>
 						</div>
