--- a/under_construction.html
+++ b/under_construction.html
@@ -45,6 +45,21 @@
 
 			</div>
 
+			<!-- Footer -->
+					<footer class="wrapper style1 align-center">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="http://www.twitter.com/laywill33" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="http://www.facebook.com/william.j.lay" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="http://www.instagram.com/laywill33/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="http://www.linkedin.com/in/laywill33/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:laywill@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
+							<p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
+							<p>&copy; William Lay 2018. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						</div>
+					</footer>
+
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
