--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 					</section>
 
 				<!-- Seven -->
-					<section class="wrapper style1 align-center">
-						<!-- <div class="inner medium">
+					<!-- <section class="wrapper style1 align-center">
+						<div class="inner medium">
 							<h2>Get in touch</h2>
 							<form method="post" action="#">
 								<div class="field half first">
@@ -139,13 +139,13 @@
 								</ul>
 							</form>
 
-						</div> -->
+						</div>
 						<div class="inner medium" id="contact">
 							<div class="container">
 							<iframe id="JotFormIFrame-72573926506362" onload="window.parent.scrollTo(0,0)" allowtransparency="true" src="https://form.jotformeu.com/72573926506362" frameborder="0" style="width: 1px; min-width: 100%; height:539px; border:none;" scrolling="no"> </iframe> <script type="text/javascript"> var ifr = document.getElementById("JotFormIFrame-72573926506362"); if(window.location.href && window.location.href.indexOf("?") > -1) { var get = window.location.href.substr(window.location.href.indexOf("?") + 1); if(ifr && get.length > 0) { var src = ifr.src; src = src.indexOf("?") > -1 ? src + "&" + get : src + "?" + get; ifr.src = src; } } window.handleIFrameMessage = function(e) { var args = e.data.split(":"); if (args.length > 2) { iframe = document.getElementById("JotFormIFrame-" + args[2]); } else { iframe = document.getElementById("JotFormIFrame"); } if (!iframe) return; switch (args[0]) { case "scrollIntoView": iframe.scrollIntoView(); break; case "setHeight": iframe.style.height = args[1] + "px"; break; case "collapseErrorPage": if (iframe.clientHeight > window.innerHeight) { iframe.style.height = window.innerHeight + "px"; } break; case "reloadPage": window.location.reload(); break; } var isJotForm = (e.origin.indexOf("jotform") > -1) ? true : false; if(isJotForm && "contentWindow" in iframe && "postMessage" in iframe.contentWindow) { var urls = {"docurl":encodeURIComponent(document.URL),"referrer":encodeURIComponent(document.referrer)}; iframe.contentWindow.postMessage(JSON.stringify({"type":"urls","value":urls}), "*"); } }; if (window.addEventListener) { window.addEventListener("message", handleIFrameMessage, false); } else if (window.attachEvent) { window.attachEvent("onmessage", handleIFrameMessage); } </script>
 						</div>
 					</div>
-					</section>
+					</section> -->
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
