--- a/photographer.html
+++ b/photographer.html
@@ -386,8 +386,8 @@
 
 
 				<!-- Seven -->
-					<section class="wrapper style1 align-center" id="contact">
-						<!-- <div class="inner medium">
+					<!-- <section class="wrapper style1 align-center" id="contact">
+						<div class="inner medium">
 							<h2>Get in touch</h2>
 							<form method="post" action="#">
 								<div class="field half first">
@@ -407,13 +407,13 @@
 								</ul>
 							</form>
 
-						</div> -->
+						</div>
 						<div class="inner medium">
 							<div class="container">
 							<iframe id="JotFormIFrame-72573926506362" onload="window.parent.scrollTo(0,0)" allowtransparency="true" src="https://form.jotformeu.com/72573926506362" frameborder="0" style="width: 1px; min-width: 100%; height:539px; border:none;" scrolling="no"> </iframe> <script type="text/javascript"> var ifr = document.getElementById("JotFormIFrame-72573926506362"); if(window.location.href && window.location.href.indexOf("?") > -1) { var get = window.location.href.substr(window.location.href.indexOf("?") + 1); if(ifr && get.length > 0) { var src = ifr.src; src = src.indexOf("?") > -1 ? src + "&" + get : src + "?" + get; ifr.src = src; } } window.handleIFrameMessage = function(e) { var args = e.data.split(":"); if (args.length > 2) { iframe = document.getElementById("JotFormIFrame-" + args[2]); } else { iframe = document.getElementById("JotFormIFrame"); } if (!iframe) return; switch (args[0]) { case "scrollIntoView": iframe.scrollIntoView(); break; case "setHeight": iframe.style.height = args[1] + "px"; break; case "collapseErrorPage": if (iframe.clientHeight > window.innerHeight) { iframe.style.height = window.innerHeight + "px"; } break; case "reloadPage": window.location.reload(); break; } var isJotForm = (e.origin.indexOf("jotform") > -1) ? true : false; if(isJotForm && "contentWindow" in iframe && "postMessage" in iframe.contentWindow) { var urls = {"docurl":encodeURIComponent(document.URL),"referrer":encodeURIComponent(document.referrer)}; iframe.contentWindow.postMessage(JSON.stringify({"type":"urls","value":urls}), "*"); } }; if (window.addEventListener) { window.addEventListener("message", handleIFrameMessage, false); } else if (window.attachEvent) { window.attachEvent("onmessage", handleIFrameMessage); } </script>
 						</div>
 					</div>
-					</section>
+					</section> -->
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
@@ -423,7 +423,7 @@
 								<li><a href="http://www.facebook.com/william.j.lay" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="http://www.instagram.com/laywill33/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="http://www.linkedin.com/in/laywill33/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:laywill@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:hello@williamlay.co.uk" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
 							<p>&copy; William Lay 2018. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
