--- a/under_construction.html
+++ b/under_construction.html
@@ -53,7 +53,7 @@
 								<li><a href="http://www.facebook.com/william.j.lay" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="http://www.instagram.com/laywill33/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="http://www.linkedin.com/in/laywill33/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:laywill@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:hello@williamlay.co.uk" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
 							<p>&copy; William Lay 2018. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
