Trying to fix contact button to scroll to footer

--- a/under_construction.html
+++ b/under_construction.html
@@ -5,68 +5,80 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<!-- Global Site Tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-106572147-1"></script>
-		<script>
-		  	window.dataLayer = window.dataLayer || [];
-		  	function gtag(){dataLayer.push(arguments)};
-		  	gtag('js', new Date());
 
-		  	gtag('config', 'UA-106572147-1');
-		</script>
-		<title>William Lay</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" itemprop="description" content="William Lay is an Engineer, Production Technician for Live and Theatre events, and a Photographer based in Bath, UK." />
-		<meta name="keywords" itemprop="keywords" content="engineer, firmware engineer, electronic engineer, electronic and electrical engineer, electronic & electrical engineer, vhdl engineer, verilog engineer, systemverilog engineer, system verilog engineer, engineer in Bath, engineer near Bath, Bath engineer, Bath electronic engineer, event technician, production technician, live technician, live event technician, theatre technician, sound technician, sound engineer, lighting technician, event technician Bath, production technician Bath, photographer, event photographer, event photographer Bath, photographer Bath, event photographer near Bath, photographer near Bath, event photographer in Bath, photographer in Bath, Bath photographer, Bath event photographer" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body>
+<head>
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-106572147-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments) };
+		gtag('js', new Date());
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="divided">
+		gtag('config', 'UA-106572147-1');
+	</script>
+	<title>William Lay</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" itemprop="description"
+		content="William Lay is an Engineer, Production Technician for Live and Theatre events, and a Photographer based in Bath, UK." />
+	<meta name="keywords" itemprop="keywords"
+		content="engineer, firmware engineer, electronic engineer, electronic and electrical engineer, electronic & electrical engineer, vhdl engineer, verilog engineer, systemverilog engineer, system verilog engineer, engineer in Bath, engineer near Bath, Bath engineer, Bath electronic engineer, event technician, production technician, live technician, live event technician, theatre technician, sound technician, sound engineer, lighting technician, event technician Bath, production technician Bath, photographer, event photographer, event photographer Bath, photographer Bath, event photographer near Bath, photographer near Bath, event photographer in Bath, photographer in Bath, Bath photographer, Bath event photographer" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-				<!-- Banner -->
-					<section class="banner style3 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
-						<div class="content">
-							<h1>William Lay</h1>
-							<p class="major">Uh oh...</p>
-							<p>This page is still under construction, sorry! If you are feeling keen you can checkout the latest Github commit to see if it is in progress.</p>
-							<ul class="actions vertical">
-								<li><a href="index.html" class="button special big wide smooth-scroll">Back to Safety</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/will/JPEGs/IMG_0179-2.jpg" alt="" />
-							<!-- <img src="images/will/JPEGs/IMG_0179-2.jpg" alt="" /> -->
-						</div>
-					</section>
+<body>
 
+	<!-- Wrapper -->
+	<div id="wrapper" class="divided">
+
+		<!-- Banner -->
+		<section
+			class="banner style3 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
+			<div class="content">
+				<h1>William Lay</h1>
+				<p class="major">Uh oh...</p>
+				<p>This page is still under construction, sorry! If you are feeling keen you can checkout the latest
+					Github commit to see if it is in progress.</p>
+				<ul class="actions vertical">
+					<li><a href="index.html" class="button special big wide smooth-scroll">Back to Safety</a></li>
+				</ul>
 			</div>
+			<div class="image">
+				<img src="images/will/JPEGs/IMG_0179-2.jpg" alt="" />
+				<!-- <img src="images/will/JPEGs/IMG_0179-2.jpg" alt="" /> -->
+			</div>
+		</section>
 
-			<!-- Footer -->
-					<footer class="wrapper style1 align-center">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="http://www.twitter.com/laywill33" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="http://www.facebook.com/william.j.lay" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="http://www.instagram.com/laywill33/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="http://www.linkedin.com/in/laywill33/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:hello@williamlay.co.uk" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
-							<p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
-							<p>&copy; William Lay 2018. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-						</div>
-					</footer>
+	</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Footer -->
+	<footer class="wrapper style1 align-center" id="contact">
+		<div class="inner">
+			<ul class="icons">
+				<li><a href="http://www.twitter.com/laywill33" class="icon style2 fa-twitter"><span
+							class="label">Twitter</span></a></li>
+				<li><a href="http://www.facebook.com/william.j.lay" class="icon style2 fa-facebook"><span
+							class="label">Facebook</span></a></li>
+				<li><a href="http://www.instagram.com/laywill33/" class="icon style2 fa-instagram"><span
+							class="label">Instagram</span></a></li>
+				<li><a href="http://www.linkedin.com/in/laywill33/" class="icon style2 fa-linkedin"><span
+							class="label">LinkedIn</span></a></li>
+				<li><a href="mailto:hello@williamlay.co.uk" class="icon style2 fa-envelope"><span
+							class="label">Email</span></a></li>
+			</ul>
+			<p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
+			<p>&copy; William Lay 2018. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+		</div>
+	</footer>
 
-	</body>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
