--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
 					</section> -->
 
 				<!-- Footer -->
-					<footer class="wrapper style1 align-center">
+					<footer class="wrapper style1 align-center" id="footer">
 						<div class="inner">
+							<h3>Contact</h3>
 							<ul class="icons">
 								<li><a href="http://www.twitter.com/laywill33" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="http://www.facebook.com/william.j.lay" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
